Add 21 new gallery images, blogs section, update copyright to 2026

--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,7 @@
             <a href="index.html">About</a>
             <a href="experience.html">Experience</a>
             <a href="projects.html">Projects</a>
+            <a href="blogs.html">Blogs</a>
             <a href="gallery.html">Gallery</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -60,6 +61,24 @@
                 
                 <div class="content-card fade-in">
                     <div class="gallery-container">
+                        <!-- Graduation & Achievements -->
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/UQ_Graduation_with_mom.jpeg" alt="UQ Graduation with Mom" data-caption="UQ Graduation Day with Mom">
+                            <div class="gallery-overlay">
+                                <h3>Graduation Day</h3>
+                                <p>With Mom</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/UQ_Graduation_with_friends.jpeg" alt="UQ Graduation with Friends" data-caption="UQ Graduation with Friends">
+                            <div class="gallery-overlay">
+                                <h3>Graduation</h3>
+                                <p>With Friends</p>
+                            </div>
+                        </div>
+
+                        <!-- DFRWS Conference -->
                         <div class="gallery-item zoom-hover">
                             <img src="images/gallery/dfrws_presenter.jpeg" alt="DFRWS Presentation" data-caption="Presenting at DFRWS Digital Forensics Conference">
                             <div class="gallery-overlay">
@@ -69,9 +88,124 @@
                         </div>
 
                         <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/DFRWS_Poster.jpeg" alt="DFRWS Poster" data-caption="DFRWS Research Poster">
+                            <div class="gallery-overlay">
+                                <h3>DFRWS Poster</h3>
+                                <p>Research Presentation</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/DFRWS_Poster_Presentations.jpeg" alt="DFRWS Poster Presentations" data-caption="DFRWS Poster Presentations">
+                            <div class="gallery-overlay">
+                                <h3>Poster Presentations</h3>
+                                <p>DFRWS Conference</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/DFRWS_Conference_Volunteering.jpeg" alt="DFRWS Volunteering" data-caption="DFRWS Conference Volunteering">
+                            <div class="gallery-overlay">
+                                <h3>DFRWS Volunteering</h3>
+                                <p>Conference Support</p>
+                            </div>
+                        </div>
+
+                        <!-- Women in Tech -->
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/Women_in_Tech_Awards_Gala.jpeg" alt="Women in Tech Awards Gala" data-caption="Women in Tech Awards Gala">
+                            <div class="gallery-overlay">
+                                <h3>WIT Awards Gala</h3>
+                                <p>Women in Tech</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/WIT_Awards_Night_Volunteering_group.jpeg" alt="WIT Awards Volunteering" data-caption="Women in Tech Awards Night Volunteering">
+                            <div class="gallery-overlay">
+                                <h3>WIT Volunteering</h3>
+                                <p>Awards Night</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/UQ_WIC.jpeg" alt="UQ Women in Computing" data-caption="UQ Women in Computing">
+                            <div class="gallery-overlay">
+                                <h3>UQ WIC</h3>
+                                <p>Women in Computing</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/UQ_Women_IN_COMPUTING_Leaders.jpeg" alt="UQ WIC Leaders" data-caption="UQ Women in Computing Leaders">
+                            <div class="gallery-overlay">
+                                <h3>WIC Leaders</h3>
+                                <p>Leadership Team</p>
+                            </div>
+                        </div>
+
+                        <!-- UQ Events & Leadership -->
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/Leaders@EAIT_2024.jpeg" alt="Leaders@EAIT 2024" data-caption="Leaders@EAIT 2024">
+                            <div class="gallery-overlay">
+                                <h3>Leaders@EAIT</h3>
+                                <p>2024</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/uq_leader.jpeg" alt="UQ Leadership" data-caption="University of Queensland Leadership">
+                            <div class="gallery-overlay">
+                                <h3>UQ Leadership</h3>
+                                <p>University of Queensland</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/UQ_LIT_mock_interview.jpeg" alt="UQ LIT Mock Interview" data-caption="UQ LIT Mock Interview Session">
+                            <div class="gallery-overlay">
+                                <h3>LIT Mock Interview</h3>
+                                <p>Interview Prep</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/UQLITxUQCS_mock_interview_prep.jpeg" alt="UQLIT x UQCS Mock Interview" data-caption="UQLIT x UQCS Mock Interview Prep">
+                            <div class="gallery-overlay">
+                                <h3>UQLIT x UQCS</h3>
+                                <p>Mock Interview Prep</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/UQ_Events_Volunteering.jpeg" alt="UQ Events Volunteering" data-caption="UQ Events Volunteering">
+                            <div class="gallery-overlay">
+                                <h3>UQ Volunteering</h3>
+                                <p>Events</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/UQ_Events_Volunteering_Wellness_week.jpeg" alt="UQ Wellness Week" data-caption="UQ Wellness Week Volunteering">
+                            <div class="gallery-overlay">
+                                <h3>Wellness Week</h3>
+                                <p>UQ Events</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/UQEUS_BALL.jpeg" alt="UQEUS Ball" data-caption="UQEUS Ball">
+                            <div class="gallery-overlay">
+                                <h3>UQEUS Ball</h3>
+                                <p>Social Event</p>
+                            </div>
+                        </div>
+
+                        <!-- Research -->
+                        <div class="gallery-item zoom-hover">
                             <img src="images/gallery/summer_research_group.jpeg" alt="Summer Research Group" data-caption="Summer Research Team">
                             <div class="gallery-overlay">
-                                <h3>Summer Research Group</h3>
+                                <h3>Summer Research</h3>
                                 <p>Research Team</p>
                             </div>
                         </div>
@@ -85,18 +219,51 @@
                         </div>
 
                         <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/uq_leader.jpeg" alt="UQ Leadership" data-caption="University of Queensland Leadership">
+                            <img src="images/gallery/UQ_Gas_and_Energy_Transition_summer_research_group.jpeg" alt="Energy Transition Research" data-caption="UQ Gas and Energy Transition Summer Research">
                             <div class="gallery-overlay">
-                                <h3>UQ Leadership</h3>
-                                <p>University of Queensland</p>
+                                <h3>Energy Research</h3>
+                                <p>Summer Program</p>
                             </div>
                         </div>
 
                         <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/uq_startup_adventure_group.jpeg" alt="UQ Startup Adventure" data-caption="UQ Startup Adventure Group">
+                            <img src="images/gallery/UQ_School_of Electrical_Engineering_and_computer_science_NEXTDC.jpeg" alt="NEXTDC Visit" data-caption="UQ EECS NEXTDC Visit">
                             <div class="gallery-overlay">
-                                <h3>UQ Startup Adventure</h3>
-                                <p>Startup Group</p>
+                                <h3>NEXTDC Visit</h3>
+                                <p>UQ EECS</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/BNE_Precinct_ACS_Event.jpeg" alt="BNE Precinct ACS Event" data-caption="Brisbane Precinct ACS Event">
+                            <div class="gallery-overlay">
+                                <h3>ACS Event</h3>
+                                <p>BNE Precinct</p>
+                            </div>
+                        </div>
+
+                        <!-- San Francisco Startup Adventure -->
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/San_Francisco_startup_adventure_BNE_Intl_Airport_departures.jpeg" alt="SF Startup Adventure Departure" data-caption="Departing for San Francisco Startup Adventure">
+                            <div class="gallery-overlay">
+                                <h3>Adventure Begins</h3>
+                                <p>BNE Airport</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/first_day_san_francisco.jpeg" alt="First Day in San Francisco" data-caption="First Day in San Francisco">
+                            <div class="gallery-overlay">
+                                <h3>San Francisco</h3>
+                                <p>First Day</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/San_Francisco_TESLA_visit.jpeg" alt="Tesla Visit" data-caption="Tesla Visit in San Francisco">
+                            <div class="gallery-overlay">
+                                <h3>Tesla Visit</h3>
+                                <p>San Francisco</p>
                             </div>
                         </div>
 
@@ -113,14 +280,6 @@
                             <div class="gallery-overlay">
                                 <h3>Stanford</h3>
                                 <p>California</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/first_day_san_francisco.jpeg" alt="First Day in San Francisco" data-caption="First Day in San Francisco">
-                            <div class="gallery-overlay">
-                                <h3>San Francisco</h3>
-                                <p>First Day</p>
                             </div>
                         </div>
 
@@ -155,6 +314,22 @@
                                 <p>National Park</p>
                             </div>
                         </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/uq_startup_adventure_group.jpeg" alt="UQ Startup Adventure" data-caption="UQ Startup Adventure Group">
+                            <div class="gallery-overlay">
+                                <h3>Startup Adventure</h3>
+                                <p>Group Photo</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/Startup_Adventure_Picture_with_friends.jpeg" alt="Startup Adventure Friends" data-caption="Startup Adventure with Friends">
+                            <div class="gallery-overlay">
+                                <h3>Adventure Friends</h3>
+                                <p>Startup Adventure</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -163,7 +338,7 @@
 
     <div class="footer-background">
         <div class="contact-footer">
-            <p>© 2025 Saakshi Gupta. All rights reserved.<br>Made with ❤️ using HTML, CSS, and JavaScript.</p>
+            <p>© 2026 Saakshi Gupta. All rights reserved.<br>Made with ❤️ using HTML, CSS, and JavaScript.</p>
         </div>
     </div>
 
