--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="index.html">About</a>
             <a href="experience.html">Experience</a>
             <a href="projects.html">Projects</a>
+            <a href="blogs.html">Blogs</a>
             <a href="gallery.html">Gallery</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -322,7 +323,7 @@
 
     <div class="footer-background">
         <div class="contact-footer">
-            <p>© 2025 Saakshi Gupta. All rights reserved.<br>Made with ❤️ using HTML, CSS, and JavaScript.</p>
+            <p>© 2026 Saakshi Gupta. All rights reserved.<br>Made with ❤️ using HTML, CSS, and JavaScript.</p>
         </div>
     </div>
 
