Add Hugging Face link to deepfake project, add Co-Founder Matching project

--- a/projects.html
+++ b/projects.html
@@ -101,7 +101,8 @@
 
                     <div class="project-card" id="deepfake-detection"
                         data-full-description="Created a multimodal deepfake analysis system integrating CNN/Vision Transformer detection, explainable AI techniques (SHAP, LIME) and image-to-text captioning with CLIP and attention mechanisms. Implemented a large-language-model contextual explanation module using Llama 3.1 and Ollama with custom prompt engineering to generate forensic insights. Developed a unified Python pipeline with PyTorch and Hugging Face Transformers and deployed RESTful APIs for integration."
-                        data-demo-link="https://drive.google.com/file/d/1mQwquNxMFo-MwqUt5p2VNxpezJFIViQD/view?usp=sharing">
+                        data-demo-link="https://drive.google.com/file/d/1mQwquNxMFo-MwqUt5p2VNxpezJFIViQD/view?usp=sharing"
+                        data-github-link="https://huggingface.co/spaces/saakshigupta/deepfake_detection_uq/tree/main">
                         <div class="project-icon">🔍</div>                        
                         <h3>DF-P2E: Deepfake Detection <span class="project-company">CSIRO Research</span></h3>
                         <p>Created a multimodal deepfake analysis system integrating CNN/Vision Transformer detection with explainable AI techniques (SHAP, LIME) and LLM-powered forensic insights using Llama 3.1.</p>
@@ -155,6 +156,22 @@
                             <span class="tech-pill">FinTech</span>
                             <span class="tech-pill">App Development</span>
                             <span class="tech-pill">Hackathon</span>
+                        </div>
+                    </div>
+
+                    <div class="project-card" id="cofounder-matching"
+                        data-full-description="A mobile app that connects entrepreneurs with potential co-founders using an algorithm that evaluates compatibility across skills, interests, goals, startup stage, location, availability, and collaboration style. Users create profiles, receive personalized match recommendations with explanations, and interact through in-app messaging and event management. The platform uses a weighted scoring system to surface compatible matches and help users make informed decisions. Key features include multi-factor matching algorithm, real-time authentication, swipeable match interface, in-app messaging, and event calendar management."
+                        data-github-link="https://github.com/saakshigupta2002/Co-Founder-Matching">
+                        <div class="project-icon">🤝</div>
+                        <h3>Co-Founder Matching <span class="project-company">UQ Ventures</span></h3>
+                        <p>A mobile app connecting entrepreneurs with potential co-founders using a multi-factor matching algorithm evaluating skills, interests, goals, and collaboration style.</p>
+                        <div class="project-tech">
+                            <span class="tech-pill">React Native</span>
+                            <span class="tech-pill">TypeScript</span>
+                            <span class="tech-pill">Flask</span>
+                            <span class="tech-pill">Python</span>
+                            <span class="tech-pill">Supabase</span>
+                            <span class="tech-pill">Docker</span>
                         </div>
                     </div>
                 </div>
