--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
                     <div class="project-card" id="deepfake-detection"
                         data-full-description="Created a multimodal deepfake analysis system integrating CNN/Vision Transformer detection, explainable AI techniques (SHAP, LIME) and image-to-text captioning with CLIP and attention mechanisms. Implemented a large-language-model contextual explanation module using Llama 3.1 and Ollama with custom prompt engineering to generate forensic insights. Developed a unified Python pipeline with PyTorch and Hugging Face Transformers and deployed RESTful APIs for integration."
                         data-demo-link="https://drive.google.com/file/d/1mQwquNxMFo-MwqUt5p2VNxpezJFIViQD/view?usp=sharing"
-                        data-github-link="https://huggingface.co/spaces/saakshigupta/deepfake_detection_uq/tree/main">
+                        data-huggingface-link="https://huggingface.co/spaces/saakshigupta/deepfake_detection_uq/tree/main">
                         <div class="project-icon">🔍</div>                        
                         <h3>DF-P2E: Deepfake Detection <span class="project-company">CSIRO Research</span></h3>
                         <p>Created a multimodal deepfake analysis system integrating CNN/Vision Transformer detection with explainable AI techniques (SHAP, LIME) and LLM-powered forensic insights using Llama 3.1.</p>
@@ -174,6 +174,16 @@
                             <span class="tech-pill">Docker</span>
                         </div>
                     </div>
+
+                    <div class="project-card" id="futurevest"
+                        data-full-description="Details coming soon...">
+                        <div class="project-icon">📈</div>
+                        <h3>FutureVest <span class="project-company">Coming Soon</span></h3>
+                        <p>Details coming soon...</p>
+                        <div class="project-tech">
+                            <span class="tech-pill">Coming Soon</span>
+                        </div>
+                    </div>
                 </div>
                 
                 <div class="content-card note-card fade-in">
@@ -204,8 +214,11 @@
                 <a id="projectModalGithubLink" href="#" target="_blank" class="github-button" style="display: none;">
                     <img src="images/icons/github-icon.png" alt="GitHub Icon"> View on GitHub
                 </a>
+                <a id="projectModalHuggingFaceLink" href="#" target="_blank" class="huggingface-button" style="display: none;">
+                    🤗 View on Hugging Face
+                </a>
                 <a id="projectModalDemoLink" href="#" target="_blank" class="demo-button" style="display: none;">
-                    ▶ Watch Demo
+                    ▶ Demo
                 </a>
             </div>
         </div>
