Add FutureVest project details and demo link

--- a/projects.html
+++ b/projects.html
@@ -176,12 +176,19 @@
                     </div>
 
                     <div class="project-card" id="futurevest"
-                        data-full-description="Details coming soon...">
+                        data-full-description="FutureVest is a web-based stock analysis platform that helps investors value stocks and discover growth opportunities across thousands of U.S. equities. It provides stock search, screening, watchlists, price alerts, technical analysis, and valuation tools. The platform uses a microservices architecture with containerized services deployed on AWS, enabling scalability and maintainability. Built with React/TypeScript frontend and Flask backend, deployed on AWS ECS Fargate with RDS PostgreSQL, featuring Docker containerization, JWT authentication, and Nginx reverse proxy for scalable, cloud-native architecture."
+                        data-demo-link="https://www.youtube.com/watch?v=dNfTGW1w-aw">
                         <div class="project-icon">📈</div>
-                        <h3>FutureVest <span class="project-company">Coming Soon</span></h3>
-                        <p>Details coming soon...</p>
+                        <h3>FutureVest <span class="project-company">Stock Analysis Platform</span></h3>
+                        <p>A web-based stock analysis platform helping investors value stocks and discover growth opportunities with screening, watchlists, alerts, and technical analysis tools.</p>
                         <div class="project-tech">
-                            <span class="tech-pill">Coming Soon</span>
+                            <span class="tech-pill">React</span>
+                            <span class="tech-pill">TypeScript</span>
+                            <span class="tech-pill">Flask</span>
+                            <span class="tech-pill">Python</span>
+                            <span class="tech-pill">PostgreSQL</span>
+                            <span class="tech-pill">AWS</span>
+                            <span class="tech-pill">Docker</span>
                         </div>
                     </div>
                 </div>
