Add course info (DECO3801, CSSE6400), GitHub and demo links for projects

--- a/projects.html
+++ b/projects.html
@@ -160,10 +160,11 @@
                     </div>
 
                     <div class="project-card" id="cofounder-matching"
-                        data-full-description="A mobile app that connects entrepreneurs with potential co-founders using an algorithm that evaluates compatibility across skills, interests, goals, startup stage, location, availability, and collaboration style. Users create profiles, receive personalized match recommendations with explanations, and interact through in-app messaging and event management. The platform uses a weighted scoring system to surface compatible matches and help users make informed decisions. Key features include multi-factor matching algorithm, real-time authentication, swipeable match interface, in-app messaging, and event calendar management."
-                        data-github-link="https://github.com/saakshigupta2002/Co-Founder-Matching">
+                        data-full-description="A mobile app that connects entrepreneurs with potential co-founders using an algorithm that evaluates compatibility across skills, interests, goals, startup stage, location, availability, and collaboration style. Users create profiles, receive personalized match recommendations with explanations, and interact through in-app messaging and event management. The platform uses a weighted scoring system to surface compatible matches and help users make informed decisions. Key features include multi-factor matching algorithm, real-time authentication, swipeable match interface, in-app messaging, and event calendar management. Developed as part of DECO3801 group project at UQ."
+                        data-github-link="https://github.com/saakshigupta2002/Co-Founder-Matching"
+                        data-demo-link="https://drive.google.com/file/d/1xez-tBBpEBgXvrYNbOPn_La0YoZJnHVT/view?usp=sharing">
                         <div class="project-icon">🤝</div>
-                        <h3>Co-Founder Matching <span class="project-company">UQ Ventures</span></h3>
+                        <h3>Co-Founder Matching <span class="project-company">UQ Ventures | DECO3801</span></h3>
                         <p>A mobile app connecting entrepreneurs with potential co-founders using a multi-factor matching algorithm evaluating skills, interests, goals, and collaboration style.</p>
                         <div class="project-tech">
                             <span class="tech-pill">React Native</span>
@@ -176,10 +177,11 @@
                     </div>
 
                     <div class="project-card" id="futurevest"
-                        data-full-description="FutureVest is a web-based stock analysis platform that helps investors value stocks and discover growth opportunities across thousands of U.S. equities. It provides stock search, screening, watchlists, price alerts, technical analysis, and valuation tools. The platform uses a microservices architecture with containerized services deployed on AWS, enabling scalability and maintainability. Built with React/TypeScript frontend and Flask backend, deployed on AWS ECS Fargate with RDS PostgreSQL, featuring Docker containerization, JWT authentication, and Nginx reverse proxy for scalable, cloud-native architecture."
-                        data-demo-link="https://www.youtube.com/watch?v=dNfTGW1w-aw">
+                        data-full-description="FutureVest is a web-based stock analysis platform that helps investors value stocks and discover growth opportunities across thousands of U.S. equities. It provides stock search, screening, watchlists, price alerts, technical analysis, and valuation tools. The platform uses a microservices architecture with containerized services deployed on AWS, enabling scalability and maintainability. Built with React/TypeScript frontend and Flask backend, deployed on AWS ECS Fargate with RDS PostgreSQL, featuring Docker containerization, JWT authentication, and Nginx reverse proxy for scalable, cloud-native architecture. Developed as part of CSSE6400 group project at UQ."
+                        data-demo-link="https://www.youtube.com/watch?v=dNfTGW1w-aw"
+                        data-github-link="https://github.com/saakshigupta2002/FutureVest">
                         <div class="project-icon">📈</div>
-                        <h3>FutureVest <span class="project-company">Stock Analysis Platform</span></h3>
+                        <h3>FutureVest <span class="project-company">Stock Analysis | CSSE6400</span></h3>
                         <p>A web-based stock analysis platform helping investors value stocks and discover growth opportunities with screening, watchlists, alerts, and technical analysis tools.</p>
                         <div class="project-tech">
                             <span class="tech-pill">React</span>
