Add first Medium blog post - Multi-Agent Customer Support with CrewAI

--- a/blogs.html
+++ b/blogs.html
@@ -65,28 +65,17 @@
                     </p>
 
                     <div class="blogs-container">
-                        <!-- ADD YOUR BLOG POSTS HERE -->
-                        <!-- Copy this block for each blog post:
-                        
-                        <a href="YOUR_MEDIUM_LINK" target="_blank" class="blog-card">
-                            <div class="blog-icon">📝</div>
+                        <a href="https://medium.com/@saakshigupta2002/i-built-a-multi-agent-customer-support-triage-system-with-crewai-and-traced-it-with-langsmith-ce7156549a55" target="_blank" class="blog-card">
+                            <div class="blog-icon">🤖</div>
                             <div class="blog-content">
-                                <h3>Your Blog Title</h3>
-                                <p class="blog-date">Jan 5, 2026</p>
-                                <p class="blog-excerpt">A brief description of what the blog post is about...</p>
+                                <h3>I Built a Multi-Agent Customer Support Triage System with CrewAI and Traced it with LangSmith</h3>
+                                <p class="blog-date">2026</p>
+                                <p class="blog-excerpt">Learn how I built a multi-agent system for customer support triage using CrewAI framework and monitored it with LangSmith for observability and debugging.</p>
                                 <span class="blog-read-more">Read on Medium →</span>
                             </div>
                         </a>
-                        
-                        -->
 
-                        <!-- Example blog post (replace with your actual posts) -->
-                        <div class="blog-placeholder">
-                            <div class="blog-icon">✍️</div>
-                            <h3>Coming Soon!</h3>
-                            <p>Blog posts will be added here. Stay tuned for articles about AI, Machine Learning, and tech insights!</p>
-                            <a href="https://medium.com/@saakshigupta2002" target="_blank" class="inline-link">Follow me on Medium →</a>
-                        </div>
+                        <!-- Add more blog posts here -->
                     </div>
                 </div>
             </section>
